--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ body::-webkit-scrollbar-thumb {
 
 /* Tarjetas individuales */
 #Pedro_Santana {
-  background-image: url(/carru27/projectoindependencia/carru27/carru/img/Tuto_Báez_-_Retrato_del_General_Pedro_Santana.jpg);
+  background-image: url(../carru27/projectoindependencia/carru27/carru/img/Tuto_Báez_-_Retrato_del_General_Pedro_Santana.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -191,7 +191,7 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 10px rgb(255, 28, 28);
 }
 #Antonio_Duverge {
-  background-image: url(/carru27/projectoindependencia/carru27/carru/img/duverge.png);
+  background-image: url(../carru27/projectoindependencia/carru27/carru/img/duverge.png);
   background-size: contain;
   animation-delay: -4s;
   background-repeat: no-repeat;
@@ -200,7 +200,7 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 10px rgb(255, 254, 255);
 }
 #Manuel_Regla_Mota {
-  background-image: url(/carru27/projectoindependencia/carru27/carru/img/Manuel_de_Regla_Mota_y_Álvarez.jpeg);
+  background-image: url(../carru27/projectoindependencia/carru27/carru/img/Manuel_de_Regla_Mota_y_Álvarez.jpeg);
   animation-delay: -8s;
   background-repeat: no-repeat;
   background-size: cover;
@@ -209,7 +209,7 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 10px rgb(0, 102, 255);
 }
 #Baltasara_Reyes {
-  background-image: url(/carru27/projectoindependencia/carru27/carru/img/Baltasara.jpg);
+  background-image: url(../carru27/projectoindependencia/carru27/carru/img/Baltasara.jpg);
   background-size: cover;
   animation-delay: -12s;
   background-repeat: no-repeat;
@@ -218,7 +218,7 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 10px rgb(255, 15, 15);
 }
 #Juan_Bautista {
-  background-image: url(/carru27/projectoindependencia/carru27/carru/img/juancambiaso.png);
+  background-image: url(../carru27/projectoindependencia/carru27/carru/img/juancambiaso.png);
   background-size: cover;
   background-repeat: no-repeat;
   animation-delay: -16s;
@@ -227,7 +227,7 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 10px rgb(255, 255, 255);
 }
 #Rosa_Duarte {
-  background-image: url(/carru27/projectoindependencia/carru27/carru/img/RosaDuarte2.avif);
+  background-image: url(../carru27/projectoindependencia/carru27/carru/img/RosaDuarte2.avif);
   background-size: 130%;
   animation-delay: -20s;
   background-repeat: no-repeat;
@@ -236,7 +236,7 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 10px rgb(0, 102, 255);
 }
 #Concepcion_Bona {
-  background-image: url(/carru27/projectoindependencia/carru27/carru/img/Concepcion\ \(1\).jpg);
+  background-image: url(../carru27/projectoindependencia/carru27/carru/img/Concepcion\ \(1\).jpg);
   background-size: cover;
   animation-delay: -24s;
   background-repeat: no-repeat;
